2002-02-23  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/move_resize.c (moveLoop):
	fixed a problem with keyboard movement vs. EdgeResistance

2002-02-22  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/events.c:
	fixed problem with root bindings and xfishtank

	* fvwm/windowlist.c (CMD_WindowList):
	applied patch by to Darren Marshall to fix placement of window list on
	wrong xinerama screen

	* libs/Parse.c (GetSuffixedIntegerArguments):
	integer arguments that must not have a suffix but have one are ignored

	* fvwm/icons.c (DeIconify):
	(Iconify):
	applied patch by Markus Schwarzenberg to fix a rare problem with the
	is_map_pending flag, iconified icons and restart

2002-02-22  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/commands.h:
	* fvwm/conditional.c (CMD_This):
	* fvwm/functions.c:
	* fvwm/functions.h:
	* fvwm/fvwm2.1:
	* NEWS:
	added new conditional command This

2002-02-21  Mikhael Goikhman  <migo@homemail.com>

	* acconfig.h:
	* configure.in:
	added fribidi library detection

2002-02-12  olicha  <olivier.chapuis@free.fr>

	* libs/Flocale.h (FlocaleFont):
	* libs/Flocale.c (get_FlocaleFont):
	(get_FlocaleFontSet):
	Compute the ascent and descent of the FlocaleFont structure directly
	from the XFontSetExtents data in the case of a fontset
	Added max_char_width to the FlocaleFont structure

	* libs/Makefile.am (libfvwm_a_SOURCES):
	* libs/GetFont.c:
	Removed libs/GetFont.c

	* fvwm/menus.c (FreeMenuStyle):
	(UpdateMenuStyle):
	(NewMenuStyle):
	(CMD_CopyMenuStyle):
	* fvwm/menus.h (MenuLook):
	Fixed default font handling font by using a new MenuLook flags
	USING_DEFAULT_FONT

	* fvwm/menus.c (UpdateMenuStyle):
	Fixed default font update

	* fvwm/fvwm.c (SetRCDefaults):
	(InitVariables):
	Load the real default font FALLBACK_FONT or MB_FALLBACK_FONT at
	fvwm initialization

2002-02-11  Mikhael Goikhman  <migo@homemail.com>

	* configure.in:
	added FvwmPerl/* file generation

2002-02-11  olicha  <olivier.chapuis@free.fr>

	* INSTALL.fvwm:
	* NEWS: