@@ -1,0 +1,6 @@
+Makefile
+Makefile.in
+.deps
+TAGS
+.gdb_history
+gmon.out
