@@ -1,0 +1,5 @@
+## Process this file with automake to create Makefile.in
+
+configdir = @FVWM_PERLLIBDIR@/FVWM/Module
+
+config_DATA = Tk.pm
