@@ -1,3 +1,13 @@
+2002-02-23  Mikhael Goikhman  <migo@homemail.com>
+
+	* FVWM/Module.pm.in:
+	several improvements
+
+	* FVWM/Makefile.am:
+	* FVWM/Module/Makefile.am:
+	* FVWM/Module/Tk.pm:
+	a new perl module subclass for writting Perl/Tk modules
+
 2002-02-10  Mikhael Goikhman  <migo@homemail.com>
 
 	* FVWM/Module.pm.in:
