@@ -1,3 +1,9 @@
+2002-02-23  Mikhael Goikhman  <migo@homemail.com>
+
+	* perl/README:
+	* perl/module-tkdesker:
+	a new simple Perl/Tk module
+
 2002-02-12  Mikhael Goikhman  <migo@homemail.com>
 
 	* hints/README:
