@@ -1,3 +1,8 @@
+2002-02-23  Mikhael Goikhman  <migo@homemail.com>
+
+	* configure.in:
+	autogenerate perllib/FVWM/Module/Makefile
+
 2002-02-23  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/move_resize.c (moveLoop):
